Bug 360487 - Changing "Points to" of a symlink leads to error
Summary: Changing "Points to" of a symlink leads to error
Status: CLOSED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.5.4
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-13 17:53 UTC by Gregor Mi
Modified: 2017-12-13 13:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.30
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gregor Mi 2016-03-13 17:53:06 UTC
Reproduce:
1. Create a symlink named "myfile.txt" in the folder view.
2. Edit properties and change the value for "Points to:".
3. See the error box: "A file named /home/user1/Desktop/myfile.txt already exists.

This does not happen if I do this in dolphin.
Comment 1 Chinmoy Ranjan Pradhan 2017-01-01 06:12:36 UTC
I can confirm this on (Neon dev edition)Plasma 5.8.4
Comment 2 David Faure 2017-01-01 11:22:21 UTC
Git commit fd1c158cb829ede6beb0d7f37f40e2cdfbd6280f by David Faure.
Committed on 01/01/2017 at 11:22.
Pushed by dfaure into branch 'master'.

Add unittests for KIO::symlink, including the case of Overwrite.

All tests pass, with file:/// URLs.
Clearly bug 360487 is related to desktop: URLs.

M  +62   -0    autotests/jobtest.cpp
M  +1    -0    autotests/jobtest.h

https://commits.kde.org/kio/fd1c158cb829ede6beb0d7f37f40e2cdfbd6280f
Comment 3 David Faure 2017-01-01 12:17:03 UTC
Git commit 7f2abde5cb036b8b500aaff45886368ca295e24f by David Faure.
Committed on 01/01/2017 at 12:16.
Pushed by dfaure into branch 'master'.

ForwardingSlaveBase: fix passing of Overwrite flag to kio_desktop

Unittest will be committed to plasma-workspace/kioslave/desktop later.
FIXED-IN: 5.30

M  +1    -1    src/core/forwardingslavebase.cpp

https://commits.kde.org/kio/7f2abde5cb036b8b500aaff45886368ca295e24f
Comment 4 David Faure 2017-01-01 12:37:25 UTC
Git commit a4339386671b8dba0a8711e57a9398f98f44a147 by David Faure.
Committed on 01/01/2017 at 12:37.
Pushed by dfaure into branch 'master'.

Add unittest for bug 360487

M  +34   -0    kioslave/desktop/tests/kio_desktop_test.cpp

https://commits.kde.org/plasma-workspace/a4339386671b8dba0a8711e57a9398f98f44a147