ForwardingSlaveBase: fix passing of Overwrite flag to kio_desktop

Unittest will be committed to plasma-workspace/kioslave/desktop later.

BUG: 360487
FIXED-IN: 5.30